@@ -1,3 +1,8 @@
+2017-08-21  Richard Biener  <rguenther@suse.de>
+
+	PR middle-end/81884
+	* g++.dg/torture/pr81884.C: New testcase.
+
 2017-08-20  John David Anglin  <danglin@gcc.gnu.org>
 
 	PR ipa/77732
